[package]
name = "pixelcrab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.5.5", features = ["derive", "autocomplete"] }
ffmpeg-next = "6.0.0"
image = "0.24.3"
itertools = "0.10.3"
rusttype = "0.9.3"

[features]
